Manufactoring/force-app/main/default/objects/Product2/fields/mfg_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>mfg_Batch_Size__c</fullName>
    <label>Batch Size</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>