Manufactoring/force-app/main/default/objects/Product2/fields/mfg_Inventory_Reconcile_Flag__c.field-meta.xml
<CustomField>
    <fullName>mfg_Inventory_Reconcile_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inventory Reconcile Flag</label>
    <type>Checkbox</type>
</CustomField>