Manufactoring/force-app/main/default/objects/Product2/fields/mfg_Lead_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>mfg_Lead_Time_Days__c</fullName>
    <formula>( mfg_Batch_Size__c  *  mfg_Cycle_Time__c ) / ( VALUE( $Label.mfg_Production_Hours_Per_Day )*60 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Time Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>