Manufactoring/force-app/main/default/objects/Product2/fields/mfg_Product_Raw_Material__c.field-meta.xml
<CustomField>
    <fullName>mfg_Product_Raw_Material__c</fullName>
    <label>Product Raw Material</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>mfg_Product_Subcategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>mfg_Product_Raw_Material</valueSetName>
    </valueSet>
</CustomField>