Manufactoring/force-app/main/default/objects/Product2/fields/mfg_Product_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>mfg_Product_Subcategory__c</fullName>
    <label>Product Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Family</controllingField>
        <restricted>true</restricted>
        <valueSetName>mfg_Product_Subcategory</valueSetName>
    </valueSet>
</CustomField>