Manufactoring/force-app/main/default/objects/Product2/fields/mfg_Reorder_point__c.field-meta.xml
<CustomField>
    <fullName>mfg_Reorder_point__c</fullName>
    <formula>CEILING(( mfg_Daily_Demand__c *  mfg_Lead_Time_Days__c ) +  mfg_Safety_Stock__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reorder point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>