Manufactoring/force-app/main/default/objects/Product2/fields/mfg_Safety_Stock__c.field-meta.xml
<CustomField>
    <fullName>mfg_Safety_Stock__c</fullName>
    <formula>CEILING(( mfg_Daily_Demand__c  *  mfg_Lead_Time_Days__c )* 0.20)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Safety Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>