Manufactoring/force-app/main/default/objects/Product2/fields/mfg_Total_Ordered_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>mfg_Total_Ordered_Last_30_Days__c</fullName>
    <label>Total Ordered Last 30 Days</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>