Manufactoring/force-app/main/default/objects/Product2/fields/mfg_Total_Reserved__c.field-meta.xml
<CustomField>
    <fullName>mfg_Total_Reserved__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Reserved</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>